# RamGAP

./: .env.example  .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/workflows/: deploy.yml  master_app-ramgap-frontend.yml
backend/: __init__.py  app.py  config.py
backend/activities/: __init__.py
backend/core/: __init__.py  database.py  models.py
backend/database/: __init__.py  db.py  models.py
backend/plaxis/: __init__.py  level1_extractInfo.py  level5_extractPlaxisResults.py  level5_getData.py  level5_printResults_simple.py  plaxis_runner.py  plaxis_service.py
backend/shared/: __init__.py  auth.py  exceptions.py  utils.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GH-PLUGIN-API.md  README.md
frontend/: __init__.py  app.py  config.py  requirements.txt
frontend/components/: __init__.py  api_client.py  auth.py  bug_report.py  page_setup.py  project_selector.py  sidebar.py
frontend/pages/: __init__.py  excel_ark.py  geogpt.py  geotolk.py  home.py  modellering.py  opplaering.py  plaxis.py  project_setup.py  ramgap_endringer.py  standarder.py
frontend/static/: style.css
sandbox/: README.md
sandbox/GH-data/: run-report.json  run-summary.md  segment_000.xlsx  segment_001.xlsx  segment_002.xlsx  segment_003.xlsx  segment_004.xlsx  segment_005.xlsx  segment_006.xlsx  test_api.py
sandbox/chatplax/: README.md  app.py  app1.py  conv.py  requirements.txt
scripts/: setup_azure_db.ps1  setup_private_endpoint.ps1  start_backend.bat  start_dev.bat  start_frontend.bat
tests/: __init__.py  conftest.py
(+84 files in other folders)
